--- a/OOP/Class-and-Objects.ipynb
+++ b/OOP/Class-and-Objects.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "133920cb",
    "metadata": {},
    "outputs": [],
@@ -109,10 +109,13 @@
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "        Person.count += 1\n",
+    "\n",
+    "    def update_name(self, new_name):\n",
+    "        self.name = str(new_name)\n",
     "        \n",
     "    @classmethod\n",
-    "    def count(cls):\n",
-    "        return cls.count()\n",
+    "    def get_count(cls):\n",
+    "        return cls.count\n",
     "    \n",
     "    @staticmethod\n",
     "    def get_fullname(fname, lname):\n",
@@ -121,32 +124,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "df104c7b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'method' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23840/4114966621.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mperson1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPerson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Samyam\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mperson1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23840/1283363139.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mPerson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'method' and 'int'"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "person1 = Person(\"Samyam\")\n",
-    "person1.count()"
+    "person1.get_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "341d79d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Konda'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person1.update_name(\"Konda\")\n",
+    "person1.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5e8b4d0f-9d4b-4e17-bcbb-740ad06ad6de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Samyam Konda'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person1.get_fullname(\"Samyam\", \"Konda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "19c73a78-ecaa-4ae1-a50e-a81fd00aa571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ram\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "person2 = Person(\"Ram\")\n",
+    "print(person2.name)\n",
+    "print(person2.get_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a0daf4ad-1b0c-4f76-85a1-2bb4618807a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hari\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "person3 = Person(\"Hari\")\n",
+    "print(person3.name)\n",
+    "print(person3.get_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9d0926c9-bca4-47f4-9274-dc2361a1a507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books = [ \n",
+    "    (\"The Alchemist\", 25),\n",
+    "    (\"The Da Vinci Code\", 30),\n",
+    "    (\"A Brief History of Time\", 15),\n",
+    "    (\"Angels & Demons\", 0),\n",
+    "    (\"The Grand Design\", 0),\n",
+    "    (\"1984\", 19)\n",
+    "]\n",
+    "\n",
+    "class Library:\n",
+    "    total_student = 0\n",
+    "    \n",
+    "    def __init__(self, stu_name, dept=\"Computer Science\"):\n",
+    "        self.stu_name = stu_name\n",
+    "        self.dept = dept\n",
+    "        Library.total_student += 1\n",
+    "\n",
+    "    def lend_book(self, book_name):\n",
+    "        for bk_name, qt in books:\n",
+    "            if bk_name == book_name and qt > 0:               \n",
+    "                return (f\"You can lend the book {book_name}\")\n",
+    "            else:\n",
+    "                return (f\"You cant lend the book {book_name}\")\n",
+    "\n",
+    "    @classmethod\n",
+    "    def get_student_count(cls):\n",
+    "        return cls.total_student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "90c56277-87ed-4d3b-b32c-3973cf135bce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You can lend the book The Alchemist'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student1 = Library(\"Samyam\" , \"IT\")\n",
+    "student1.lend_book(\"The Alchemist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b9f59fd6-a0ef-4764-ad80-6ac86c635e87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You cant lend the book The Grand Design'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student2 = Library(\"Konda\" , \"IT\")\n",
+    "student2.lend_book(\"The Grand Design\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2708bbbd-48ff-406e-b9f5-22b9d1b31e06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Library.get_student_count()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "341d79d3",
+   "id": "f0c7e868-54d7-46b2-9bde-827df0b90094",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -168,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
