--- a/Assignments/Assignments-02.ipynb
+++ b/Assignments/Assignments-02.ipynb
@@ -28,15 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Name:  Samyam\n",
+      "Age:  23\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Samyam\n",
-      "Age: 23\n",
       "Hello, my name is Samyam and I am 23 years old.\n"
      ]
     }
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +74,7 @@
        "['Gaming', 'Football', 'Travelling', 'Eating']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +268,28 @@
     "        if genre == book_genre and year_published >= year:\n",
     "            filtered_books.append(title)\n",
     "            \n",
+    "    return filtered_books\n",
+    "\n",
+    "print(filter_books(\"Fiction\", 1960))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The Alchemist', 'To Kill a Mockingbird']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def filter_books(genre:str, year:int):\n",
+    "    filtered_books = [title for title, book_genre, year_published, times_borrowed in books\n",
+    "        if genre == book_genre and year_published >= year]           \n",
     "    return filtered_books\n",
     "\n",
     "print(filter_books(\"Fiction\", 1960))"
@@ -689,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
