--- a/Assignments/Assignments-03-SEPT20(Decorators-and-Classes).ipynb
+++ b/Assignments/Assignments-03-SEPT20(Decorators-and-Classes).ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "a286f01a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 3,
    "id": "e007527e-343c-45a0-9882-aa73b755c095",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 7,
    "id": "c0b5196d",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 8,
    "id": "70bbec8d",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 9,
    "id": "6186bdcb",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 10,
    "id": "f8d69fc4-f355-4266-b556-d3ff84479a91",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 11,
    "id": "4fa36953-59a7-4828-bc39-f9f4877fcd87",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 12,
    "id": "6752826b-cd12-48d7-b7bd-5aaf67d15950",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 13,
    "id": "4b0030a9-3d5f-4830-a122-5e443f62223f",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 14,
    "id": "1fe7472c-c40a-4e7f-90fb-4bf78f0014dc",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "31.5"
       ]
      },
-     "execution_count": 680,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 15,
    "id": "f8942ade-972f-4d13-96a8-7c5beb030ffc",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 16,
    "id": "fce91fa6-c723-4719-8f60-94451944087c",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 17,
    "id": "e13c31a0-02de-48b3-9052-c5a39b20fd18",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "30"
       ]
      },
-     "execution_count": 683,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 18,
    "id": "3c12ae69",
    "metadata": {
     "scrolled": true
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 19,
    "id": "24af94e3-4e76-494d-92dc-e8130207fa28",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 20,
    "id": "f5d0c276-85e0-4a39-9aee-2fa4a70f2707",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 21,
    "id": "59e0bc19-36f6-4f4f-9d96-994e0dc19b59",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 22,
    "id": "4ae3d654-87d8-4402-a951-2cefa122a809",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 23,
    "id": "17b4acab-9880-4884-bb82-132dcd5bc859",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,12 @@
     "            print(\"User isnot Authorized\")\n",
     "\n",
     "    def set_premium(self, user):\n",
-    "        user.member = True\n",
+    "        if self.__is_admin:\n",
+    "            user.member = True\n",
+    "            print(\"Membership set to premium.\")\n",
+    "        else:\n",
+    "            print(\"User isnot Authorized\")\n",
+    "        \n",
     "        #name, member=  user.get_details()\n",
     "        #member = True\n",
     "\n",
@@ -491,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 24,
    "id": "328526fa-a59c-4531-b4ff-560d7036506e",
    "metadata": {},
    "outputs": [],
@@ -501,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 25,
    "id": "4951f2cf-82f4-4c5f-bbba-8cbf83d8a66d",
    "metadata": {},
    "outputs": [
@@ -511,7 +516,7 @@
        "'Alice is Admin'"
       ]
      },
-     "execution_count": 702,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 26,
    "id": "008e242f-f7e0-4d8d-8fdc-87d161e53f76",
    "metadata": {},
    "outputs": [
@@ -540,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 27,
    "id": "4ea74fb3-6b52-4f63-a227-dafc9073a808",
    "metadata": {},
    "outputs": [
@@ -550,7 +555,7 @@
        "'Scott is Admin'"
       ]
      },
-     "execution_count": 693,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 28,
    "id": "04bf72ff-d311-4946-9e4a-d338be196cb5",
    "metadata": {},
    "outputs": [
@@ -569,7 +574,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Changing Membership....\n"
+      "Changing Membership....\n",
+      "Membership set to premium.\n"
      ]
     }
    ],
@@ -579,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 29,
    "id": "564ed4bb-db98-42cb-9385-ac24b09aec78",
    "metadata": {},
    "outputs": [
@@ -597,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 30,
    "id": "5135026a-51a3-4d3d-bbe4-71636d7a2767",
    "metadata": {},
    "outputs": [
@@ -615,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 31,
    "id": "7910b295-e788-43a1-ac0f-bf85bc94929e",
    "metadata": {},
    "outputs": [
@@ -633,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 32,
    "id": "573c8151-74c9-4428-9899-f09cd2f3edf2",
    "metadata": {},
    "outputs": [
@@ -641,7 +647,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Changing Membership....\n"
+      "Changing Membership....\n",
+      "Membership set to premium.\n"
      ]
     }
    ],
@@ -651,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 34,
    "id": "784dc651-90e0-4d40-9a5f-bab7f0df377c",
    "metadata": {},
    "outputs": [
@@ -666,14 +673,6 @@
    "source": [
     "print(user3.member)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a91aabc-4f6a-4864-8ecb-8eb1fe2f0c9c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
