--- a/Numpy/Numpy-Arrays.ipynb
+++ b/Numpy/Numpy-Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "aa22505e",
    "metadata": {},
    "outputs": [
@@ -11,11 +11,14 @@
      "output_type": "stream",
      "text": [
       "Collecting numpy\n",
-      "  Downloading numpy-2.0.2-cp39-cp39-win_amd64.whl.metadata (59 kB)\n",
-      "Downloading numpy-2.0.2-cp39-cp39-win_amd64.whl (15.9 MB)\n",
-      "   ---------------------------------------- 15.9/15.9 MB 15.9 MB/s eta 0:00:00\n",
+      "  Downloading numpy-2.1.1-cp312-cp312-win_amd64.whl.metadata (59 kB)\n",
+      "Downloading numpy-2.1.1-cp312-cp312-win_amd64.whl (12.6 MB)\n",
+      "   ---------------------------------------- 0.0/12.6 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.5/12.6 MB 4.2 MB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 6.3/12.6 MB 20.3 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.6/12.6 MB 30.3 MB/s eta 0:00:00\n",
       "Installing collected packages: numpy\n",
-      "Successfully installed numpy-2.0.2\n"
+      "Successfully installed numpy-2.1.1\n"
      ]
     }
    ],
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "1441295b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "1b683a14",
    "metadata": {},
    "outputs": [],
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "defd5afa",
    "metadata": {},
    "outputs": [
@@ -63,7 +66,7 @@
        "array([1, 4, 7, 3, 1])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "ffc6c3de",
    "metadata": {},
    "outputs": [
@@ -85,7 +88,7 @@
        "array([1, 4, 7, 3, 1])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "c38f508b",
    "metadata": {},
    "outputs": [
@@ -107,7 +110,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "9aad1854",
    "metadata": {},
    "outputs": [
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "c40e660f",
    "metadata": {},
    "outputs": [],
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "828803b5",
    "metadata": {},
    "outputs": [],
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "cf1a2572",
    "metadata": {},
    "outputs": [
@@ -175,7 +178,7 @@
       " [4 5 6]]\n",
       "2\n",
       "(2, 3)\n",
-      "int32\n"
+      "int64\n"
      ]
     }
    ],
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "641bd517",
    "metadata": {},
    "outputs": [
@@ -207,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "9f9c0ec4",
    "metadata": {},
    "outputs": [
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "e834f871",
    "metadata": {},
    "outputs": [
@@ -240,7 +243,7 @@
        "array([1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "bf9d2f28",
    "metadata": {},
    "outputs": [
@@ -266,7 +269,7 @@
        "       [1., 1., 1.]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "80956e85",
    "metadata": {
     "scrolled": true
@@ -294,7 +297,7 @@
        "       [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "86d907ba",
    "metadata": {
     "scrolled": true
@@ -321,7 +324,7 @@
        "       [0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "a24050fa",
    "metadata": {},
    "outputs": [
@@ -346,7 +349,7 @@
        "       [0., 0., 0., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,19 +361,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "id": "659f0c2c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.66289438, 0.2725656 , 0.25434586, 0.60345283],\n",
-       "       [0.4074093 , 0.11224287, 0.77103948, 0.22161302],\n",
-       "       [0.52326446, 0.67212052, 0.29538704, 0.49623368]])"
+       "array([[0.90298475, 0.937471  , 0.33678408, 0.44351107],\n",
+       "       [0.80922391, 0.37676065, 0.64841965, 0.77740256],\n",
+       "       [0.8442911 , 0.25839431, 0.01327832, 0.82245143]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "id": "f0e478b7",
    "metadata": {},
    "outputs": [
@@ -391,7 +394,7 @@
        "array([ 5, 10, 15, 20, 25, 30, 35, 40, 45, 50])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "id": "38192ddd",
    "metadata": {},
    "outputs": [
@@ -414,7 +417,7 @@
        "       [30, 35, 40, 45, 50]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "id": "debd06c3",
    "metadata": {},
    "outputs": [
@@ -435,7 +438,7 @@
        "array([-3.4, -1.3,  0.8,  2.9,  5. ,  7.1,  9.2, 11.3, 13.4])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "id": "50fc592b",
    "metadata": {},
    "outputs": [
@@ -456,7 +459,7 @@
        "array([ 0.,  2.,  4.,  6.,  8., 10.])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "id": "d32f0225",
    "metadata": {},
    "outputs": [
@@ -483,7 +486,7 @@
        "       [10., 20., 30.]])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "id": "9073f912",
    "metadata": {},
    "outputs": [
@@ -507,7 +510,7 @@
        "       [10. , 13. , 16. , 19. , 22. , 25. ]])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "id": "3d26d0dc",
    "metadata": {},
    "outputs": [
@@ -532,7 +535,7 @@
        "       [0, 0, 0, 4]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "id": "79831435",
    "metadata": {},
    "outputs": [
@@ -558,7 +561,7 @@
        "       [0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 27,
    "id": "ac0e9fb0",
    "metadata": {},
    "outputs": [
@@ -584,7 +587,7 @@
        "       [0, 0, 0, 4, 0]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 28,
    "id": "4edbe546",
    "metadata": {},
    "outputs": [],
@@ -606,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 29,
    "id": "4bed4a89",
    "metadata": {},
    "outputs": [
@@ -616,7 +619,7 @@
        "(2, 3, 4)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,23 +630,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "id": "bfffd6bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[13, 10,  4, 11],\n",
-       "        [ 8, 17, 11, 23],\n",
-       "        [13, 11, 17, 17]],\n",
+       "array([[[ 5, 19, 13,  9],\n",
+       "        [ 7,  5, 23, 11],\n",
+       "        [23, 17, 11, 21]],\n",
        "\n",
-       "       [[14, 20, 20, 23],\n",
-       "        [18, 11, 15,  4],\n",
-       "        [14,  1,  3, 13]]])"
+       "       [[22, 17, 10,  6],\n",
+       "        [21,  5, 12, 16],\n",
+       "        [ 8, 20,  2,  2]]], dtype=int32)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "id": "c5cee222",
    "metadata": {},
    "outputs": [],
@@ -664,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "id": "116f9cae",
    "metadata": {},
    "outputs": [
@@ -674,7 +677,7 @@
        "(2, 2, 1, 3)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,40 +688,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "id": "a5e1f36c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[[ 3,  8,  8]],\n",
+       "array([[[[ 2, 24,  6]],\n",
        "\n",
-       "        [[20, 16, 20]]],\n",
+       "        [[21, 19, 21]]],\n",
        "\n",
        "\n",
-       "       [[[20, 13,  8]],\n",
+       "       [[[12, 18, 12]],\n",
        "\n",
-       "        [[17,  9, 16]]]])"
+       "        [[21,  8,  5]]]], dtype=int32)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nd_array1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6737b4b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c"
    ]
   }
  ],
@@ -738,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
