Pandas and Numpy

--- a/Numpy/Properties-and-Methods.ipynb
+++ b/Numpy/Properties-and-Methods.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8bd8812c-655d-4742-9125-98e97db9c0fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 1, 38, 30,  2],\n",
-       "        [14, 31, 24,  7],\n",
-       "        [48, 35,  9, 41],\n",
-       "        [34, 39, 38, 34]],\n",
+       "array([[[40,  3, 39, 33],\n",
+       "        [10, 20, 48, 38],\n",
+       "        [ 7, 12, 18, 19],\n",
+       "        [ 2, 41, 39,  5]],\n",
        "\n",
-       "       [[ 1, 16, 42, 49],\n",
-       "        [31, 49, 10, 35],\n",
-       "        [23, 33, 35,  4],\n",
-       "        [25, 43,  5, 23]]], dtype=int32)"
+       "       [[ 7,  4, 16, 29],\n",
+       "        [39, 45, 23,  1],\n",
+       "        [27, 18, 21, 15],\n",
+       "        [32, 27, 24,  5]]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "fcda8717-44f7-4648-9674-44e24375c27c",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "(2, 4, 4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "c5364446-2544-4dd5-8215-74023730b46b",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "7e340e53-935c-445f-9f8d-3ac627b0d857",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,35 +105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ca7cbc9d-4708-47c3-aea2-40695f630cd7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 1,  1],\n",
-       "        [14, 31],\n",
+       "array([[[40,  7],\n",
+       "        [10, 39],\n",
+       "        [ 7, 27],\n",
+       "        [ 2, 32]],\n",
+       "\n",
+       "       [[ 3,  4],\n",
+       "        [20, 45],\n",
+       "        [12, 18],\n",
+       "        [41, 27]],\n",
+       "\n",
+       "       [[39, 16],\n",
        "        [48, 23],\n",
-       "        [34, 25]],\n",
+       "        [18, 21],\n",
+       "        [39, 24]],\n",
        "\n",
-       "       [[38, 16],\n",
-       "        [31, 49],\n",
-       "        [35, 33],\n",
-       "        [39, 43]],\n",
-       "\n",
-       "       [[30, 42],\n",
-       "        [24, 10],\n",
-       "        [ 9, 35],\n",
-       "        [38,  5]],\n",
-       "\n",
-       "       [[ 2, 49],\n",
-       "        [ 7, 35],\n",
-       "        [41,  4],\n",
-       "        [34, 23]]], dtype=int32)"
+       "       [[33, 29],\n",
+       "        [38,  1],\n",
+       "        [19, 15],\n",
+       "        [ 5,  5]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,27 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "283523c4-bfea-4492-ba22-eda661ea8bc6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 1, 38, 30,  2],\n",
-       "        [14, 31, 24,  7]],\n",
+       "array([[[40,  3, 39, 33],\n",
+       "        [10, 20, 48, 38]],\n",
        "\n",
-       "       [[48, 35,  9, 41],\n",
-       "        [34, 39, 38, 34]],\n",
+       "       [[ 7, 12, 18, 19],\n",
+       "        [ 2, 41, 39,  5]],\n",
        "\n",
-       "       [[ 1, 16, 42, 49],\n",
-       "        [31, 49, 10, 35]],\n",
+       "       [[ 7,  4, 16, 29],\n",
+       "        [39, 45, 23,  1]],\n",
        "\n",
-       "       [[23, 33, 35,  4],\n",
-       "        [25, 43,  5, 23]]], dtype=int32)"
+       "       [[27, 18, 21, 15],\n",
+       "        [32, 27, 24,  5]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,19 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "7c4fe255-20db-4f1f-8408-05000118b875",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1, 38, 30,  2, 14, 31, 24,  7, 48, 35,  9, 41, 34, 39, 38, 34,  1,\n",
-       "       16, 42, 49, 31, 49, 10, 35, 23, 33, 35,  4, 25, 43,  5, 23],\n",
-       "      dtype=int32)"
+       "array([40,  3, 39, 33, 10, 20, 48, 38,  7, 12, 18, 19,  2, 41, 39,  5,  7,\n",
+       "        4, 16, 29, 39, 45, 23,  1, 27, 18, 21, 15, 32, 27, 24,  5])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,19 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "e881dad9-873a-42cd-be26-4d7c538aab1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1, 38, 30,  2, 14, 31, 24,  7, 48, 35,  9, 41, 34, 39, 38, 34,  1,\n",
-       "       16, 42, 49, 31, 49, 10, 35, 23, 33, 35,  4, 25, 43,  5, 23],\n",
-       "      dtype=int32)"
+       "array([40,  3, 39, 33, 10, 20, 48, 38,  7, 12, 18, 19,  2, 41, 39,  5,  7,\n",
+       "        4, 16, 29, 39, 45, 23,  1, 27, 18, 21, 15, 32, 27, 24,  5])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,17 +219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "336b1d65-c93e-467f-b945-a88260188969",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(849)"
+       "707"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,18 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "73c31dfe-4d8f-4274-b8e3-3340c4211975",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 97, 143, 101,  84],\n",
-       "       [ 80, 141,  92, 111]])"
+       "array([[ 59,  76, 144,  95],\n",
+       "       [105,  94,  84,  50]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,17 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "6a1982aa-5295-4f1e-b813-fd82753ffd73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(849)"
+       "707"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "8b9560ca-e76b-4217-b643-9e835ff6486d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int32(49)"
+       "48"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,18 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "f98d6c1f-63db-410b-9983-24504b9a780f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  22848, 1607970,  246240,   19516],\n",
-       "       [  17825, 1112496,   73500,  157780]])"
+       "array([[   5600,   29520, 1314144,  119130],\n",
+       "       [ 235872,   87480,  185472,    2175]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,18 +335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "ea750eae-9615-41d1-8918-1e914ad56769",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 3, 3, 2],\n",
-       "       [1, 1, 0, 0]])"
+       "array([[0, 3, 1, 1],\n",
+       "       [1, 1, 3, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,8 +359,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "bb37c832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[40,  3, 39, 33],\n",
+       "        [10, 20, 48, 38],\n",
+       "        [ 7, 12, 18, 19],\n",
+       "        [ 2, 41, 39,  5]],\n",
+       "\n",
+       "       [[ 7,  4, 16, 29],\n",
+       "        [39, 45, 23,  1],\n",
+       "        [27, 18, 21, 15],\n",
+       "        [32, 27, 24,  5]]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "b58a384b-7b44-4e27-9341-a2783bb476b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 40,  43,  82, 115, 125, 145, 193, 231, 238, 250, 268, 287, 289,\n",
+       "       330, 369, 374, 381, 385, 401, 430, 469, 514, 537, 538, 565, 583,\n",
+       "       604, 619, 651, 678, 702, 707])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.cumsum() #row wise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "da7ef99a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 40,   3,  39,  33],\n",
+       "        [ 50,  23,  87,  71],\n",
+       "        [ 57,  35, 105,  90],\n",
+       "        [ 59,  76, 144,  95]],\n",
+       "\n",
+       "       [[  7,   4,  16,  29],\n",
+       "        [ 46,  49,  39,  30],\n",
+       "        [ 73,  67,  60,  45],\n",
+       "        [105,  94,  84,  50]]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.cumsum(axis = 1)  #column wise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a1d225d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = np.random.randint(low = 1, high = 50, size = (2,3))\n",
+    "a2 = np.random.randint(low = 1, high = 50, size = (2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "980364ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[42,  6, 19],\n",
+       "        [ 5, 33, 12]]),\n",
+       " array([[45,  3, 12],\n",
+       "        [18, 33, 14]]))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1, a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f9a2f32a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[42,  6, 19],\n",
+       "       [ 5, 33, 12],\n",
+       "       [45,  3, 12],\n",
+       "       [18, 33, 14]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Vertical stack requires same no of columns of the matrix\n",
+    "np.vstack((a1, a2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c2320c8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[42,  6, 19, 45,  3, 12],\n",
+       "       [ 5, 33, 12, 18, 33, 14]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Horizontal stack requires the same no of rows\n",
+    "np.hstack((a1, a2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89c35b73",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
